[tool.poetry]
name = "dj_recommender"
version = "0.1.0"
description = ""
authors = ["Tobi DEGNON <degnonfrancis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=3"
attrs = "^21.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-django = "^4.5.2"
mypy = "^0.931"
pre-commit = "^2.17.0"
black = "^22.1.0"
django-stubs = "^1.9.0"
factory-boy = "^3.2.1"
ipython = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
